# CesiumWVD

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  drm-trigger.html  drm_trigger.py  extract.ps1  extract.sh  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  gui.md  troubleshooting.md
frontend/: README.md  electron-builder.yml  index.html  package-lock.json  package.json  setup.ps1  setup.sh  tailwind.config.js  tsconfig.electron.json  vite.config.ts
frontend/electron/: main.ts  preload.cts  python-bridge.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: LogViewer.tsx  ProgressBar.tsx  PromptOverlay.tsx  StepIndicator.tsx  TitleBar.tsx
frontend/src/components/steps/: DeviceStep.tsx  DoneStep.tsx  EnvironmentStep.tsx  ExtractionStep.tsx  InstallStep.tsx  WelcomeStep.tsx
frontend/src/hooks/: useBackend.ts
frontend/src/styles/: global.css
src/: adb_utils.py  avd_manager.py  check_prereqs.py  drm_trigger.py  env_detect.py  frida_setup.py  ipc_bridge.py  keydive_runner.py  main.py  ui.py  wvd_install.py
